2009-05-14  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* Fix occasional segfault in RNAalifold's print_aliout() 

2009-02-24  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* Add -MEA options to RNAfold and RNAalifold
	* change energy_of_alistruct to return float not void

2009-02-24  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* RNAfold will draw structures unless -noPS is used (no more
	  "structure too long" messages)
	* Restore the "alifold.out" output from RNAalifold -p
	* RNAalifold -circ did not work due to wrong return type
	* Accessibility calculation with RNAplfold would give wrong
	  results for u<=30

2008-12-03  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* Add zuker style suboptimals to RNAsubopt (-z)
	* get_line() should be much faster when reading huge sequences
	  (e.g. whole chromosomes for RNALfold)

2008-08-12  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* Add Ribosum matrices for covariance scoring in RNAalifold

2008-06-27  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* Change RNAalifold to used berni's new energy evaluation w/o gaps
	* Add stochastic backtracking in RNAalifold

2008-07-04  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* modify output of RNAup (again).
	  Program reading RNAup output will have to updated!

2008-07-02  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* RNAplfold now computes accessibilities for all regions up to a
	  max length simultaneously. Slightly slower when only 1 value is
	  needed, but much faster if all of them are wanted.
	  This entails a new output format. Programs reading accessibility
	  output from RNAplfold need to be updated!

2008-03-31  Stephan Bernhart  <berni@tbi.univie.ac.at>

	* add cofolding to RNAsubopt

2008-01-08  Ivo Hofacker  <ivo@tbi.univie.ac.at>

	* ensure circfold works even for open chain

2007-12-13  Ulli Mueckstein  <ulli@tbi.univie.ac.at>

	* upate RNAup related files
	  RNAup can now include the intramolecular structure of both
	  molecules and handles constraints.

2007-12-05  Ronny Lorenz  <ronny@tbi.univie.ac.at>
