@@ -1,4 +1,4 @@
-/* Last changed Time-stamp: <2009-02-18 14:19:51 ivo> */
+/* Last changed Time-stamp: <2009-09-30 17:05:19 ivo> */
 /*
   local pair probabilities for RNA secondary structures
 
@@ -107,11 +107,11 @@ PUBLIC struct plist *pfl_fold(char *sequence, int winSize, int pairSize, float c
     fprintf(stderr, "There was a problem with non existing File Pointer for unpaireds, terminating process\n");
     return pl;
   }
- 
-  dpp=*dpp2;
-  if (dpp !=NULL) do_dpp=1; 
 
-  
+  dpp=*dpp2;
+  if (dpp !=NULL) do_dpp=1;
+
+
   max_real = (sizeof(FLT_OR_DBL) == sizeof(float)) ? FLT_MAX : DBL_MAX;
 
   n = (int) strlen(sequence);
@@ -130,18 +130,16 @@ PUBLIC struct plist *pfl_fold(char *sequence, int winSize, int pairSize, float c
 
   /*here, I allocate memory for pU, if has to be saved, I allocate all in one go,
     if pU is put out and freed, I only allocate what I really need*/
- 
+
   if (ulength>0){
-    
     if (pUoutput) {
       for (i=1; i<=ulength; i++) pU[i]=(double *)space((MAX(MAXLOOP,ulength)+2)*sizeof(double));
-      
     }
     else {
       for (i=1; i<=n; i++) pU[i]=(double *)space((MAX(MAXLOOP,ulength)+2)*sizeof(double));
      }
   }
- 
+
   /*array initialization ; qb,qm,q
     qb,qm,q (i,j) are stored as ((n+1-i)*(n-i) div 2 + n+1-j */
   num_p=0;
@@ -173,7 +171,7 @@ PUBLIC struct plist *pfl_fold(char *sequence, int winSize, int pairSize, float c
 	  if (((type==3)||(type==4))&&no_closingGU) qbt1 = 0;
 	  else
 	    qbt1 = expHairpinEnergy(u, type, S1[i+1], S1[j-1], sequence+i-1);
-	  
+
 	  /* interior loops with interior pair k,l */
 	  for (k=i+1; k<=MIN(i+MAXLOOP+1,j-TURN-2); k++) {
 	    u1 = k-i-1;
@@ -194,11 +192,11 @@ PUBLIC struct plist *pfl_fold(char *sequence, int winSize, int pairSize, float c
 	  tt = rtype[type];
 	  qbt1 += temp*expMLclosing*expMLintern[tt]*scale[2]*
 	    expdangle3[tt][S1[i+1]]*expdangle5[tt][S1[j-1]];
-	  
+
 	  qb[i][j] = qbt1;
 	} /* end if (type!=0) */
 	else qb[i][j] = 0.0;
-	
+
 	/* construction of qqm matrix containing final stem
 	   contributions to multiple loop partition function
 	   from segment i,j */
@@ -211,7 +209,7 @@ PUBLIC struct plist *pfl_fold(char *sequence, int winSize, int pairSize, float c
 	  qqm[i] += qbt1;
 	}
 	if (qm1) qm1[jindx[j]+i] = qqm[i]; /* for stochastic backtracking */
-	
+
 	/*construction of qm matrix containing multiple loop
 	  partition function contributions from segment i,j */
 	temp = 0.0;
@@ -221,7 +219,7 @@ PUBLIC struct plist *pfl_fold(char *sequence, int winSize, int pairSize, float c
 	if (ulength>0) qm2[i][j]=temp;/*new qm2 computation done here*/
 	for (k=i+1; k<=j; k++) temp += expMLbase[k-i]*qqm[k];
 	qm[i][j] = (temp + qqm[i]);
-	
+
 	/*auxiliary matrix qq for cubic order q calculation below */
 	qbt1 = qb[i][j];
 	if (type) {
@@ -230,7 +228,7 @@ PUBLIC struct plist *pfl_fold(char *sequence, int winSize, int pairSize, float c
 	  else if (type>2) qbt1 *= expTermAU;
 	}
 	qq[i] = qq1[i]*scale[1] + qbt1;
-	
+
 	/*construction of partition function for segment i,j */
 	temp = 1.0*scale[1+j-i] + qq[i];
 	for (k=i; k<=j-1; k++) temp += q[i][k]*qq[k+1];
@@ -253,19 +251,21 @@ PUBLIC struct plist *pfl_fold(char *sequence, int winSize, int pairSize, float c
     }
 
     /*just as a general service, I save here the free energy of the windows
-no output is generated, however,...
-    */
-    if ((j>winSize)&&(j<=n)&&(ulength)&&!(pUoutput)) {
+      no output is generated, however,...     */
+    if ((j>=winSize)&&(j<=n)&&(ulength)&&!(pUoutput)) {
       double Fwindow=0.;
       Fwindow=(-log(q[j-winSize+1][j])-winSize*log(pf_scale))*(temperature+K0)*GASCONST/1000.0;
 
       pU[j][0]=Fwindow;
+      if (ulength>=winSize) {
+	pU[j][winSize]=scale[winSize]/q[j-winSize+1][j];
       }
-   if (j>winSize) {
-     
+    }
+    if (j>winSize) {
+      
       Qmax=0;
-      /*i=j-winSize;*/
-      /*initialize multiloopfs*/
+      /* i=j-winSize; */
+      /* initialize multiloopfs */
       for (k=j-winSize; k<=MIN(n,j); k++) {
 	prml[k]=0;
 	prm_l[k]=0;
@@ -275,17 +275,17 @@ no output is generated, however,...
       k=j-winSize;
       for (l=k+TURN+1; l<=MIN(n,k+winSize-1); l++) {
 	int a;
-	pR[k][l] = 0; /*set zero at start*/
+	pR[k][l] = 0; /* set zero at start */
 	type=ptype[k][l];
 	if (qb[k][l]==0) continue;
-	
+
 	for (a=MAX(1,l-winSize+2); a<MIN(k,n-winSize+2);a++)
 	  pR[k][l]+=q[a][k-1]*q[l+1][a+winSize-1]/q[a][a+winSize-1];
-	
+
 	if (l-k+1==winSize)
 	  pR[k][l]+=1./q[k][l];
 	else {
-	  if (k+winSize-1<=n)          /*k outermost*/
+	  if (k+winSize-1<=n)          /* k outermost */
 	    pR[k][l]+=q[l+1][k+winSize-1]/q[k][k+winSize-1];
 	  if (l-winSize+1>=1)  /*l outermost*/
 	    pR[k][l]+=q[l-winSize+1][k-1]/q[l-winSize+1][l];
@@ -297,7 +297,7 @@ no output is generated, however,...
 	else if (type>2)
 	  pR[k][l] *= expTermAU;
 	type_2 = ptype[k][l]; type_2 = rtype[type_2];
-	
+
 	for (i=MAX(MAX(l-winSize+1,k-MAXLOOP-1),1); i<=k-1; i++) {
 	  for (m=l+1; m<=MIN(MIN(l+ MAXLOOP -k+i+2,i+winSize-1),n); m++) {
 	    type = ptype[i][m];
@@ -306,12 +306,12 @@ no output is generated, however,...
 						 S1[i+1], S1[m-1], S1[k-1], S1[l+1]);
 	  }
 	}
-  	if (ulength) { /*NOT IF WITHIN INNER LOOP*/
+	if (ulength) { /* NOT IF WITHIN INNER LOOP */
 	  for (i=MAX(MAX(l-winSize+1,k-MAXLOOP-1),1); i<=k-1; i++) {
 	    for (m=l+1; m<=MIN(MIN(l+ MAXLOOP -k+i+2,i+winSize-1),n); m++) {
 	      type = ptype[i][m];
 	      if ((pR[i][m]>0)){
-		temp=pR[i][m]*qb[k][l]*expLoopEnergy(k-i-1, m-l-1, type, type_2,				     
+		temp=pR[i][m]*qb[k][l]*expLoopEnergy(k-i-1, m-l-1, type, type_2,
 						     S1[i+1], S1[m-1], S1[k-1], S1[l+1]);
 		QI5[l][m-l-1]+=temp;
 		QI5[i][k-i-1]+=temp;
@@ -319,11 +319,11 @@ no output is generated, however,...
 	    }
 	   }
 	}
-  }
+      }
       /* 3. bonding k,l as substem of multi-loop enclosed by i,m */
       prm_MLb = 0.;
       if(k>1) /*sonst nix!*/
-	for (l=MIN(n-1,k+winSize-2); l>=k+TURN+1; l--) { /*opposite direction*/
+	for (l=MIN(n-1,k+winSize-2); l>=k+TURN+1; l--) { /* opposite direction */
 	  m=l+1;
 	  prmt = prmt1 = 0.0;
 	  tt = ptype[k-1][m]; tt=rtype[tt];
@@ -341,13 +341,8 @@ no output is generated, however,...
 
 	  prm_MLb = prm_MLb*expMLbase[1] + prml[m];
 	  /* same as:    prm_MLb = 0;
-	     for (i=1; i<=k-1; i++) prm_MLb += prml[i]*expMLbase[k-i-1]; 
-	     NAAAA, des kann ned sei!
-	     weil mia kommen ja von oben, muss also maximal:
-	     for (i=n; i>k; i--)  prm_MLb += prml[i]*expMLbase[k-i-1]; 
-	     sein
+	     for (i=n; i>k; i--)  prm_MLb += prml[i]*expMLbase[k-i-1];
 	  */
-	  /*wenn ma das da macht, das mit dem q2l*/
 	  prml[m] = prml[ m] + prm_l[m];
 
 	  if (qb[k][l] == 0.) continue;
@@ -356,9 +351,9 @@ no output is generated, however,...
 
 	  if (ulength) {
 	    double dang;
-	    /*coefficient for computations of unpairedarrays*/
+	    /* coefficient for computations of unpairedarrays */
 	    dang =  expMLintern[tt]*scale[2];
-	    dang *= expdangle5[tt][S1[k-1]]; 
+	    dang *= expdangle5[tt][S1[k-1]];
 	    dang *= expdangle3[tt][S1[l+1]];
 	    dang*=qb[k][l];
 	    for (m=MIN(k+winSize-2,n);m>=l+2; m--){
@@ -366,7 +361,7 @@ no output is generated, however,...
 	      q2l[l][m-l-1]+=(prml[m]-prm_l[m])*dang;
 	    }
 	  }
-	  
+
 	  for (m=MIN(k+winSize-2,n);m>=l+2; m--)
 	    temp += prml[m]*qm[l+1][m-1];
 
@@ -392,16 +387,13 @@ no output is generated, however,...
 
       /* end for (l=..)   */
       if ((ulength)&&(k-MAXLOOP-1>0)){
-	/*	if (pUoutput) pU[k-MAXLOOP-1]=(double *)space((ulength+2)*sizeof(double));*/
 	compute_pU(k-MAXLOOP-1,ulength,pU, winSize, n, sequence);
 	
-	/*here, we put out and free pUs not in use any more (hopefully)*/
-	if (pUoutput) {
+	/* here, we print and free pUs not in use any more (hopefully)*/
+	if (pUoutput) 
 	  putoutpU(pU,k-MAXLOOP-1, ulength, pUfp);
-	}
-
       }
-   
+
       if (j-(2*winSize+MAXLOOP+1)>0) {
 	printpbar(pR,winSize,j-(2*winSize+MAXLOOP+1),n);
 	if (simply_putout) {
@@ -414,20 +406,17 @@ no output is generated, however,...
 	FreeOldArrays(j-(2*winSize+MAXLOOP+1));
       }
     }   /* end if (do_backtrack)*/
-    
+
   }/*end for j */
-  
+
   /*finish output and free*/
   for (j=MAX(1,n-MAXLOOP); j<=n;j++) {
     /*   if (pUoutput) pU[j]=(double *)space((ulength+2)*sizeof(double));*/
     if (ulength) compute_pU(j,ulength,pU, winSize, n, sequence);
     /*here, we put out and free pUs not in use any more (hopefully)*/
-    if (pUoutput){
-      putoutpU(pU,j, ulength, pUfp);
-    }
-
+    if (pUoutput) putoutpU(pU,j, ulength, pUfp);
   }
-  for (j=MAX(n-winSize-MAXLOOP,1); j<=n; j++) { 
+  for (j=MAX(n-winSize-MAXLOOP,1); j<=n; j++) {
     printpbar(pR,winSize,j,n);
     if (simply_putout) {
       print_plist(n, j, pR, winSize, spup);
@@ -443,7 +432,7 @@ no output is generated, however,...
 		    "you might try a smaller pf_scale than %g\n",
 		    ov, pf_scale);
   *dpp2=dpp;
- 
+  
   return pl;
 }
 
@@ -464,12 +453,12 @@ PRIVATE void scale_pf_params(unsigned int length)
   unsigned int i, j, k, l;
   double  kT, TT;
   double  GT;
-  
-  
+
+
   init_temp = temperature;
   kT = (temperature+K0)*GASCONST;   /* kT in cal/mol  */
   TT = (temperature+K0)/(Tmeasure);
-  
+
   /* scaling factors (to avoid overflows) */
   if (pf_scale==-1) { /* mean energy for random sequences: 184.3*length cal */
     pf_scale = exp(-(-185+(temperature-37.)*7.27)/kT);
@@ -478,7 +467,7 @@ PRIVATE void scale_pf_params(unsigned int length)
   scale[0] = 1.; scale[1] = 1./pf_scale;
   for (i=2; i<=length; i++)
     scale[i] = scale[i/2]*scale[i-(i/2)];
-  
+
   /* loop energies: hairpins, bulges, interior, mulit-loops */
   for (i=0; i<=MIN(30,length); i++) {
     GT =  hairpin37[i]*TT;
@@ -492,7 +481,7 @@ PRIVATE void scale_pf_params(unsigned int length)
   }
   /* special case of size 2 interior loops (single mismatch) */
   if (james_rule) expinternal[2] = exp ( -80*10/kT);
-  
+
   lxc = lxc37*TT;
   for (i=31; i<length; i++) {
     GT = hairpin37[30]*TT + (lxc*log( i/30.));
@@ -692,7 +681,7 @@ PRIVATE void get_arrays(unsigned int length)
   exphairpin = (FLT_OR_DBL *) space(sizeof(FLT_OR_DBL)*(length+1));
   expMLbase  = (FLT_OR_DBL *) space(sizeof(FLT_OR_DBL)*(length+1));
   scale = (FLT_OR_DBL *) space(sizeof(FLT_OR_DBL)*(length+1));
- 
+
   if (ulength>0) {
   QI5 = (FLT_OR_DBL **) space((length+1)*sizeof(FLT_OR_DBL *));
   /* QI3 = (FLT_OR_DBL **) space((length+1)*sizeof(FLT_OR_DBL *));*/
@@ -751,7 +740,7 @@ PUBLIC void free_pf_arraysLP(void)
     free(qm2);
     free(q2l);
   }
- 
+
 #ifdef SUN4
   standard_arithmetic();
 #else
@@ -821,7 +810,7 @@ PRIVATE void GetNewArrays(int j, int winSize) {
   qm[j]-=j;
   if (ulength!=0) {
     qm2[j]=(FLT_OR_DBL *)space((winSize+1)*sizeof(FLT_OR_DBL));
-    qm2[j]-=j; 
+    qm2[j]-=j;
     QI5[j]=(FLT_OR_DBL *)space((winSize+1)*sizeof(FLT_OR_DBL));
     qmb[j]=(FLT_OR_DBL *)space((winSize+1)*sizeof(FLT_OR_DBL));
     q2l[j]=(FLT_OR_DBL *)space((winSize+1)*sizeof(FLT_OR_DBL));
@@ -876,7 +865,7 @@ PRIVATE struct plist *get_deppp(struct plist *pl, int start, int pairsize, int l
   struct plist *temp;
   temp=(plist *)space(pairsize*sizeof(plist)); /*holds temporary deppp*/
   for (j=start+TURN; j<MIN(start+pairsize,length); j++) {
-    
+
     if ((qb[start][j]*qb[start-1][(j+1)])>10e-200) {
       int type=ptype[start-1][j+1];
       int type_2=rtype[ptype[start][j]];
@@ -889,7 +878,7 @@ PRIVATE struct plist *get_deppp(struct plist *pl, int start, int pairsize, int l
   }
   /*write it to list of deppps*/
   for (i=0; pl[i].i!=0; i++);
-  pl=(struct plist *)xrealloc(pl,(i+count+1)*sizeof(struct plist)); 
+  pl=(struct plist *)xrealloc(pl,(i+count+1)*sizeof(struct plist));
   for (j=0; j<count; j++) {
     pl[i+j].i=temp[j].i;
     pl[i+j].j=temp[j].j;
@@ -925,10 +914,10 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
   int j3, len, obp;
   double temp;
   double *QBE;
- 
+
   QBE=(double *) space((MAX(ulength,MAXLOOP)+2)*sizeof(double));
- 
-  /*first, we will*/ 
+
+  /*first, we will*/
  /*for k<=ulength, pU[k][k]=0, because no bp can enclose it*/
   if (pUoutput&&k+ulength<=n)  pU[k+ulength]=(double *)space((ulength+2)*sizeof(double));
   /*compute pu[k+ulength][ulength] */
@@ -947,7 +936,7 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
 	if (j3-1>k+ulength)temp+=qm2[k+ulength+1][j3-1]*expMLbase[(k+ulength-i5)];/*(..|-----|{}{})*/
 	if ((i5<k)&&(j3-1>k+ulength))temp+=qm[i5+1][k]*qm[k+ulength+1][j3-1]*expMLbase[ulength];/*({}|-----|{})*/
 	/* add dangles, multloopclosing etc. */
-	temp*=scale[2]; 
+	temp*=scale[2];
 	temp*=expMLclosing*expMLintern[rtype[ptype[i5][j3]]];
 	temp*=expdangle3[rtype[ptype[i5][j3]]][S1[i5+1]]*expdangle5[rtype[ptype[i5][j3]]][S1[j3-1]];
 	/*add hairpins*/
@@ -956,12 +945,12 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
 	temp*=pR[i5][j3];
 	pU[k+ulength][ulength]+=temp;
 
-      }	    
-    }	  
+      }
+    }
    }
    /*code doubling to avoid if within loop*/
-#if 0  
-  /*initialization for interior loops, 
+#if 0
+  /*initialization for interior loops,
     it is not recomended to have verysmall ulengths!!*/
   if (ulength<MAXLOOP) {
     int k5;
@@ -977,14 +966,14 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
       k5+TURN<l3<=k
     */
     for (i5=MAX(k+ulength-winSize,1);i5<k-TURN-1;i5++) {
- 	    	   
+
       for (j3=k+ulength+1; j3<=MIN(n,MIN(i5+winSize-1,k+MAXLOOP+1)); j3++) {
 	double temp=0;
 	if (outype=ptype[i5][j3]>0) /*oder so halt*/
 	  for (l3=MAX(i5+TURN+1,j3-MAXLOOP-1); l3<=k; l3++){
 	    for (k5=i5+1; k5<=MIN(l3-TURN-1,MAXLOOP+i5+l3+2-j3); k5++){
 	      if (ptype[k5][l3]) {
-		temp+= qb[k5][l3]*expLoopEnergy(k5-i5-1, j3-l3-1, outype, rtype[ptype[k5][l3]], S1[i5+1], S1[j3-1], S1[k5-1], S1[l3+1]);  
+		temp+= qb[k5][l3]*expLoopEnergy(k5-i5-1, j3-l3-1, outype, rtype[ptype[k5][l3]], S1[i5+1], S1[j3-1], S1[k5-1], S1[l3+1]);
 	      }
 	    }
 	  }
@@ -992,7 +981,7 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
 	pU[k+ulength][ulength]+= temp;
       }
     }
-    /*kl bp is 3'*/ 
+    /*kl bp is 3'*/
     /*
       k+ulength-MAXLOOP<=i5<=k
       k+ulength+1+TURN<j3<i5+winSize
@@ -1005,8 +994,8 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
 	if (outype=ptype[i5][j3]>0) /*oder so halt*/
 	  for (k5=k+ulength+1; k5<MIN(j3-TURN-1,i5+MAXLOOP+2); k5++) {
 	    for (l3=MAX(k5+TURN+1,j3+k5-i5-2-MAXLOOP); l3<j3; l3++) {
-	      if (ptype[k5][l3]) 
-		temp += qb[k5][l3]*expLoopEnergy(k5-i5-1, j3-l3-1, outype, rtype[ptype[k5][l3]], S1[i5+1], S1[j3-1], S1[k5-1], S1[l3+1]);   
+	      if (ptype[k5][l3])
+		temp += qb[k5][l3]*expLoopEnergy(k5-i5-1, j3-l3-1, outype, rtype[ptype[k5][l3]], S1[i5+1], S1[j3-1], S1[k5-1], S1[l3+1]);
 	    }
 	  }
 	temp*=pR[i5][j3];
@@ -1019,14 +1008,14 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
   temp=0.;
 
   for (len=winSize; len>=ulength; len--) temp+=QI3[k][len];
-  for (len=ulength-1;len>0; len--) { /*grenzen*/
+  for ( ;len>0; len--) {
     temp+=QI3[k][len];
-    QBE[len]+=temp; 
+    QBE[len]+=temp;
   }
 #endif
   temp=0.;
-  for (len=winSize; len>MAX(ulength,MAXLOOP); len--) temp+=QI5[k][len];
-  for (len=MAX(ulength,MAXLOOP);len>0; len--) { /*grenzen?*/
+  for (len=winSize; len>=MAX(ulength,MAXLOOP); len--) temp+=QI5[k][len];
+  for ( ;len>0; len--) { /*grenzen?*/
     temp+=QI5[k][len];
     QBE[len]+=temp;  /*replace QBE with QI*/
   }
@@ -1038,18 +1027,18 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
     QBE[obp-k-1]+=temp;  /*add hairpins to QBE (all in one array)*/
   }
   /*doubling the code to get the if out of the loop*/
-  
+
   /*Add up Multiloopterms  qmb[l][m]+=prml[m]*dang;
     q2l[l][m]+=(prml[m]-prm_l[m])*dang; */
-	
+
   temp=0.;
   for (len=winSize;len>=ulength; len--)temp+=q2l[k][len]*expMLbase[len];
-  for (len=ulength-1;len>0; len--) {
+  for ( ;len>0; len--) {
     temp+=q2l[k][len]*expMLbase[len];
     QBE[len]+=temp;/*add (()()____) type cont. to I3*/
   }
   for (len=1; len<ulength;len++) {
-    for (obp=k+len+TURN; obp<=MIN(n,k+winSize-1); obp++) {	  
+    for (obp=k+len+TURN; obp<=MIN(n,k+winSize-1); obp++) {
       /*add (()___())*/
       QBE[len]+=qmb[k][obp-k-1]*qm[k+len+1/*2*/][obp-1]*expMLbase[len];
     }
@@ -1062,21 +1051,21 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
 	temp*=expMLclosing*expMLintern[rtype[ptype[k][obp]]];
 	temp*=expdangle3[rtype[ptype[k][obp]]][S1[k+1]]*expdangle5[rtype[ptype[k][obp]]][S1[obp-1]];
 	QBE[len]+=pR[k][obp]*temp*qm2[k+len+1][obp-1]; /*add (___()())*/
-      }  
+      }
     }
   }
-  /*After computing all these contributions in QBE[len], that k is paired 
-    and the unpaired stretch is AT LEAST len long, we start to add that to 
+  /*After computing all these contributions in QBE[len], that k is paired
+    and the unpaired stretch is AT LEAST len long, we start to add that to
     the old unpaired thingies;*/
-  for (len=1; len<=MIN(MAX(ulength,MAXLOOP),n-k); len++) {
+  for (len=1; len<MIN(MAX(ulength,MAXLOOP),n-k); len++) {
     pU[k+len][len]+=pU[k+len][len+1]+QBE[len];
   }
-  
+
   /*now the not enclosed by any base pair terms for whatever it is we do not need anymore...
     ... which should be e.g; k, again*/
   for (startu=MIN(ulength,k); startu>0; startu--) {
     temp=0.;
-    for (i5=MAX(1,k-winSize+2); i5<=MIN(k-startu,n-winSize+1); i5++) { 
+    for (i5=MAX(1,k-winSize+2); i5<=MIN(k-startu,n-winSize+1); i5++) {
       temp+=q[i5][k-startu]*q[k+1][i5+winSize-1]*scale[startu]/q[i5][i5+winSize-1];
     }
     /*the 2 Cases where the borders are on the edge of the interval*/
@@ -1086,14 +1075,14 @@ PRIVATE void compute_pU(int k, int ulength, double **pU, int winSize,int n, char
     pU[k][startu]+=temp;
       {
       int leftmost, rightmost;
-       
+
       leftmost = MAX(1,k-winSize+1);
       rightmost = MIN(n-winSize+1,k-startu+1);
-      pU[k][startu]/=(rightmost-leftmost+1); 
+      pU[k][startu]/=(rightmost-leftmost+1);
 }
        }
   free(QBE);
-  	
+
   return;
 }
 
@@ -1121,21 +1110,21 @@ PUBLIC void putoutpU_prob(double **pU,int length, int ulength, FILE *fp, int ene
     fprintf(fp,"%d\t", i);
   }
   fprintf(fp,"\n");
-  
+
   for (k=1; k<=length; k++){
     fprintf(fp,"%d\t",k);
     for (i=1; i<=ulength; i++) {
       if (i>k) {
 	fprintf(fp,"NA\t");
 	continue;
-      } 
+      }
       if (energies) temp=-log(pU[k][i])*kT;
       else temp=pU[k][i];
       fprintf(fp,"%.7g\t",temp);
     }
     fprintf(fp,"\n");
     free(pU[k]);
-  } 
+  }
   free(pU[0]);
   free(pU);
   fflush(fp);
